# Notion-Calendar

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml
deploy/prod/: values.yaml
src/: calendar.rs  database.rs  main.rs  notion.rs  server.rs
